--- a/tasks/ovirt_storage_add.yml
+++ b/tasks/ovirt_storage_add.yml
@@ -1,12 +1,18 @@
+
 - name: adding storage domains
-  ovirt_storage_create: name='{{item.key}}' 
-                        datacenter='{{item.value.datacenter}}'
-                        host='{{item.value.host}}'
-                        path='{{item.value.path}}'
-                        type='{{item.value.type}}'
-                        storage_type='{{item.value.storage_type}}'
-                        storage_url='{{item.value.storage_url}}'
-                        url='{{item.value.engine_fqdn}}'
-                        username='{{item.value.engine_user}}' 
-                        password='{{item.value.engine_password}}'
-  with_dict: '{{ovirt_storage_add}}'
+  ovirt_storage_create: name={{item.name}} 
+                        datacenter={{item.datacenter}}
+                        host={{item.host}}
+                        path={{item.path}}
+                        type={{item.type}}
+                        storage_type={{item.storage_type}}
+                        storage_url={{item.storage_url}}
+                        url={{item.engine_fqdn}}
+                        username={{item.engine_user}} 
+                        password={{item.engine_password}}
+  with_items:
+    '{{ovirt_storage_add}}'
+    
+    
+    
+  
